test/e2e/features/oauth/testdata/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  selector:
    app.kubernetes.io/name: httpbin
  ports:
  - protocol: TCP
    port: 8443
    name: https
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: httpbin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpbin
    spec:
      containers:
      - image: docker.io/mccutchen/go-httpbin:2.19.0
        imagePullPolicy: IfNotPresent
        name: httpbin
        command: [go-httpbin]
        args:
        - "-port"
        - "8443"
        - "-https-cert-file"
        - "/etc/certs/tls.crt"
        - "-https-key-file"
        - "/etc/certs/tls.key"
        ports:
        - containerPort: 8443
        volumeMounts:
        - name: certs
          mountPath: /etc/certs
          readOnly: true
      volumes:
      - name: certs
        secret:
          secretName: httpbin-tls
---
# httpbin cert and key generated using:
# openssl req -x509 -out backend.crt -keyout backend.key -newkey rsa:2048 -days 3650 -nodes -sha256 -subj '/CN=backend.example.com' -extensions EXT -config <( printf "[dn]\nCN=backend.example.com\n[req]\ndistinguished_name = dn\n[EXT]\nsubjectAltName=DNS:backend.example.com\nkeyUsage=digitalSignature\nextendedKeyUsage=serverAuth")
apiVersion: v1
kind: Secret
metadata:
  name: httpbin-tls
type: kubernetes.io/tls
stringData:
  tls.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDDjCCAfagAwIBAgIUDcHvOZe5mvJVNTn3yB+m0K/EQkQwDQYJKoZIhvcNAQEL
[...]
    3hcwvzgG/lOYfUuzkVYOThwr
    -----END CERTIFICATE-----
  tls.key: |
    -----BEGIN PRIVATE KEY-----
    MIIEvwIBADANBgkqhkiG9w0BAQEFAASCBKkwggSlAgEAAoIBAQDBQ9MdW1HRb0kZ
[...]
    Whxd/D5tfZD1aNGdLNlzkuBirg==
    -----END PRIVATE KEY-----
---
# Same as tls.crt to use in BackendTLSPolicy CA validation
apiVersion: v1
kind: ConfigMap
metadata:
  name: httpbin-tls-ca
data:    
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIDDjCCAfagAwIBAgIUDcHvOZe5mvJVNTn3yB+m0K/EQkQwDQYJKoZIhvcNAQEL
[...]
    3hcwvzgG/lOYfUuzkVYOThwr
    -----END CERTIFICATE-----
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: httpbin-tls
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: httpbin
  validation:
    hostname: backend.example.com
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      name: httpbin-tls-ca
