test/e2e/features/oauth/testdata/setup.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app.kubernetes.io/name: keycloak
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    name: http
    protocol: TCP
  - port: 443
    targetPort: 8443
    name: https
    protocol: TCP
  selector:
    app.kubernetes.io/name: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.4.7
        imagePullPolicy: IfNotPresent
        args:
        - "start-dev"
        ports:
        - name: https
          containerPort: 8443
          protocol: TCP
        - name: http
          containerPort: 8080
          protocol: TCP
        env:
        - name: KC_BOOTSTRAP_ADMIN_USERNAME
          value: admin
        - name: KC_BOOTSTRAP_ADMIN_PASSWORD
          value: admin
        - name: KC_HOSTNAME
          # must match the Service name to be DNS resolvable; the Auth flow will use this hostname
          value: keycloak
        - name: KC_HTTPS_CERTIFICATE_FILE
          value: /etc/certs/tls.crt
        - name: KC_HTTPS_CERTIFICATE_KEY_FILE
          value: /etc/certs/tls.key
        - name: KC_HTTPS_PORT
          value: "8443"
        - name: KC_HTTP_PORT
          value: "8080"
        - name: KC_LOG_LEVEL
          value: debug
        readinessProbe:
          initialDelaySeconds: 3
          periodSeconds: 3
          tcpSocket:
            port: 8443
        volumeMounts:
        - name: certs
          mountPath: /etc/certs
          readOnly: true
      - name: setup
        image: quay.io/keycloak/keycloak:26.4.7
        command:
        - "sh"
        - "-c"
        - |
          set -ex

          KEYCLOAK_ADMIN=admin
          KEYCLOAK_ADMIN_PASSWORD=admin
          KEYCLOAK_SERVER=http://127.0.0.1:8080
          REALM=master
          USERNAME=kgateway
          PASSWORD=kgateway
          USER_EMAIL=kgateway@example.com
          CLIENT_ID=kgateway-client-id
          CLIENT_SECRET=kgateway-client-secret
          REDIRECT_URL=https://example.com/oauth2/redirect # must match the HTTPRoute/oauth host and path
          REDIRECT_URL_SECOND=https://example.com/anything/second/oauth2/redirect # must match the HTTPRoute/oauth-2 host and path
          REDIRECT_URL_SPLIT=https://example.com/split/oauth2/redirect # must match the HTTPRoute/oauth-split host and path

          until /opt/keycloak/bin/kcadm.sh get realms --server "${KEYCLOAK_SERVER}" --realm master --user "${KEYCLOAK_ADMIN}" --password "${KEYCLOAK_ADMIN_PASSWORD}"; do
            echo "Waiting for Keycloak admin to be ready..."
            sleep 2
          done

          /opt/keycloak/bin/kcadm.sh create users \
          -s username="${USERNAME}" \
          -s enabled=true \
          -s email="${USER_EMAIL}" \
          -s emailVerified=true \
          --server "${KEYCLOAK_SERVER}" \
          --realm "${REALM}" \
          --user "${KEYCLOAK_ADMIN}" \
          --password "${KEYCLOAK_ADMIN_PASSWORD}"

          /opt/keycloak/bin/kcadm.sh set-password \
          --username "${USERNAME}" \
          --new-password "${PASSWORD}" \
          --server "${KEYCLOAK_SERVER}" \
          --realm "${REALM}" \
          --user "${KEYCLOAK_ADMIN}" \
          --password "${KEYCLOAK_ADMIN_PASSWORD}"

          /opt/keycloak/bin/kcreg.sh create \
          -s clientId="${CLIENT_ID}" \
          -s secret="${CLIENT_SECRET}" \
          -s "redirectUris=[\"${REDIRECT_URL}\",\"${REDIRECT_URL_SECOND}\",\"${REDIRECT_URL_SPLIT}\"]" \
          -s consentRequired=false \
          --server "${KEYCLOAK_SERVER}" \
          --realm "${REALM}" \
          --user "${KEYCLOAK_ADMIN}" \
          --password "${KEYCLOAK_ADMIN_PASSWORD}"

          clientInternalId=$(/opt/keycloak/bin/kcadm.sh get clients \
          -q clientId="${CLIENT_ID}" \
          --server "${KEYCLOAK_SERVER}" \
          --realm "${REALM}" \
          --user "${KEYCLOAK_ADMIN}" \
          --password "${KEYCLOAK_ADMIN_PASSWORD}" \
          | sed -n 's/.*"id" : "\([^"]*\)".*/\1/p' | xargs)

          /opt/keycloak/bin/kcadm.sh update clients/$clientInternalId \
          -s 'attributes."post.logout.redirect.uris"=*' \
          --server "${KEYCLOAK_SERVER}" \
          --realm "${REALM}" \
          --user "${KEYCLOAK_ADMIN}" \
          --password "${KEYCLOAK_ADMIN_PASSWORD}"

          tail -f /dev/null # keep the container running
      volumes:
      - name: certs
        secret:
          secretName: keycloak-tls
      terminationGracePeriodSeconds: 0
---
# example cert and key generated using:
# openssl req -x509 -out example.crt -keyout example.key -newkey rsa:2048 -days 3650 -nodes -sha256 -subj '/CN=example.com' -extensions EXT -config <( printf "[dn]\nCN=example.com\n[req]\ndistinguished_name = dn\n[EXT]\nsubjectAltName=DNS:example.com\nkeyUsage=digitalSignature\nextendedKeyUsage=serverAuth")
apiVersion: v1
kind: Secret
metadata:
  name: keycloak-tls
type: kubernetes.io/tls
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM5akNDQWQ2Z0F3SUJBZ0lVUEhzK0hPVk9yaW9Ld2RYSnpKNG4rY3doa0c0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0ZqRVVNQklHQTFVRUF3d0xaWGhoYlhCc1pTNWpiMjB3SGhjTk1qVXhNakF4TVRZMU1qUXlXaGNOTXpVeApNVEk1TVRZMU1qUXlXakFXTVJRd0VnWURWUVFEREF0bGVHRnRjR3hsTG1OdmJUQ0NBU0l3RFFZSktvWklodmNOCkFRRUJCUUFEZ2dFUEFEQ0NBUW9DZ2dFQkFNQUNHZ1AyMEFDcFVWcnU5K3VrM1M5dkdWR1Q5bktDd3VPVG5JODgKdkpwOWNlaUdRSjdUZDRSb1VvNFM5UkhjT0svcTg1VWh4VHo1RzlacWtHNElqL3UrdURCM001ODdGR09aWUtTZQpJU0RZbVlhU0psM3FQW [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRREFBaG9EOXRBQXFWRmEKN3ZmcnBOMHZieGxSay9aeWdzTGprNXlQUEx5YWZYSG9oa0NlMDNlRWFGS09FdlVSM0RpdjZ2T1ZJY1U4K1J2VwphcEJ1Q0kvN3ZyZ3dkek9mT3hSam1XQ2tuaUVnMkptR2tpWmQ2ajE1QUs2UHUrUmttU2RGdytSTDg3eHNFSUhUClppNDhoRXFaeHhmNERldnFiaDVJZW1vVTBZVUQvQm1TU1RhRERQZzBISFdqU2g1U1hDRjd2NmpPMjgyUzhpb1kKOHU3NFFNQ2g1QUhuUVpUTG9VRFpyZFlyOExoRTQrc0hoNHBPZ3JOTmtnK3gxQmxmVUtiVXMyWkl2UDlDTHNGVwpWMURLVW50UlIvTDZ5Z [...]
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: keycloak-tls-ca
data:
  # same as tls.crt in keycloak-tls secret
  ca.crt: |
    -----BEGIN CERTIFICATE-----
    MIIC9jCCAd6gAwIBAgIUPHs+HOVOrioKwdXJzJ4n+cwhkG4wDQYJKoZIhvcNAQEL
[...]
    1gn0vdJ4tP8gvbgoJ0KVFVyKrO3s2qjmAEDn3dlAKsjBJCfKV6UAx+Rz
    -----END CERTIFICATE-----
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: oauth-gateway
spec:
  gatewayClassName: kgateway
  infrastructure:
    parametersRef:
      group: gateway.kgateway.dev
      kind: GatewayParameters
      name: oauth-gateway
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      mode: Terminate
      certificateRefs:
      - name: keycloak-tls # same as the secret used for Keycloak TLS
        kind: Secret
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayParameters
metadata:
  name: oauth-gateway
spec:
  kube:
    envoyContainer:
      bootstrap:
        componentLogLevels:
          jwt: debug
          oauth2: debug
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth
spec:
  parentRefs:
  - name: oauth-gateway
  hostnames:
  - example.com # must match the CN in the Keycloak TLS cert
  rules:
  - name: rule0
    matches:
    - path:
        type: PathPrefix
        value: /
    filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          set:
            - name: x-oauth2-token-types
              value: "%DYNAMIC_METADATA(envoy.filters.http.jwt_authn:accessToken:typ)%, %DYNAMIC_METADATA(envoy.filters.http.jwt_authn:idToken:typ)%"
    backendRefs:
    - name: httpbin
      port: 8443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: no-oauth
spec:
  parentRefs:
  - name: oauth-gateway
  hostnames:
  - test.com
  rules:
  - name: rule0
    matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: httpbin
      port: 8443
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: oauth-route
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: oauth
  oauth2:
    extensionRef:
      name: keycloak-oauth
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: GatewayExtension
metadata:
  name: keycloak-oauth
spec:
  oauth2:
    backendRef:
      kind: Service
      name: keycloak
      port: 443
    tokenEndpoint: https://keycloak/realms/master/protocol/openid-connect/token
    authorizationEndpoint: https://keycloak/realms/master/protocol/openid-connect/auth
    endSessionEndpoint: https://keycloak/realms/master/protocol/openid-connect/logout
    credentials:
      clientID: kgateway-client-id # must match the clientId created in Keycloak
      clientSecretRef:
        name: oauth-client-secret
    redirectURI: https://example.com/oauth2/redirect # must match the REDIRECT_URL used in Keycloak setup
    logoutPath: /logout
    forwardAccessToken: true
    scopes: ["openid", "email"]
    jwt:
      jwksURI: https://keycloak/realms/master/protocol/openid-connect/certs
      accessToken:
        audiences:
          - account
        claimsToHeaders:
          - name: preferred_username
            header: x-oauth2-preferred-username
      idToken:
        claimsToHeaders:
          - name: email
            header: x-oauth2-email
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-jwks
  labels:
    app.kubernetes.io/name: keycloak
spec:
  type: ClusterIP
  ports:
  - port: 443
    targetPort: 8443
    name: https
    protocol: TCP
  selector:
    app.kubernetes.io/name: keycloak
---
apiVersion: gateway.networking.k8s.io/v1alpha3
kind: BackendTLSPolicy
metadata:
  name: keycloak-jwks-tls
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: keycloak-jwks
  validation:
    hostname: example.com
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      name: keycloak-tls-ca
---
apiVersion: v1
kind: Secret
metadata:
  name: oauth-client-secret
data:
  # kgateway-client-secret; must match the client secret created in Keycloak
  client-secret: a2dhdGV3YXktY2xpZW50LXNlY3JldA==
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: keycloak-tls
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: keycloak
  validation:
    hostname: example.com
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      name: keycloak-tls-ca
